--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "main": "node index.js"
   },
   "author": "RidwanzSaputra",
+  "license": "MIT",
   "dependencies": {
     "node-telegram-bot-api": "^0.66.0",
-    "express": "^4.19.2",
-    "axios": "^1.7.2"
+    "express": "^4.21.1",
+    "axios": "^1.7.7"
   }
 }
